@@ -1,2 +1,2 @@
 mvn package
-java -Djava.library.path=target -jar target/benchmarks.jar
+java -Djava.library.path=target --enable-native-access=ALL-UNNAMED -jar target/benchmarks.jar
